Fixed: Comment submit being very small on mobile

--- a/site-sass/components/comments.scss
+++ b/site-sass/components/comments.scss
@@ -52,7 +52,7 @@
     margin:  0 auto;
 
     @include mq($until:tablet) {
-      width: 60%;
+      width: auto;
     }
   }
 
